Added validation on Entity and Hash password
